[#6] feat : heap 메모리 똑같이 설정